--- a/.openshift/.leinrc
+++ b/.openshift/.leinrc
@@ -1,7 +1,9 @@
 #!/bin/bash
 export LEIN_HOME="${OPENSHIFT_DATA_DIR}/.lein"
 export LEIN_JVM_OPTS="-Duser.home=${LEIN_HOME}"
-export JVM_OPTS="-Dport=${OPENSHIFT_DIY_PORT} -Dhost=${OPENSHIFT_DIY_IP} -Dhornetq.netty.port=15000 -Dhornetq.netty.host=${OPENSHIFT_DIY_IP}"
+export JVM_OPTS="-Dhornetq.netty.port=15000 -Dhornetq.netty.host=${OPENSHIFT_DIY_IP}"
+export DEMO_WEB_HOST=${OPENSHIFT_DIY_IP}
+export DEMO_WEB_PORT=${OPENSHIFT_DIY_PORT}
 
 if [ ! -d ${LEIN_HOME} ]; then
     echo "Installing Leiningen"
