--- a/app.json
+++ b/app.json
@@ -3,5 +3,6 @@
   "description": "A template for getting started with the popular Immutant framework.",
   "website": "http://immutant.org",
   "success_url": "/index.html",
-  "addons": ["heroku-postgresql:hobby-dev", "papertrail"]
+  "addons": ["heroku-postgresql"],
+  "image": "heroku/clojure"
 }
